# EGSnrc

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  CODE_OF_CONDUCT.md  INSTALL.md  LICENCE.md  README.md  README_MPI.txt  Vagrantfile  _config.yml  index.html  index.md  params.json
.devcontainer/: README.md  build-gui-apps.sh  devcontainer.json  setup.sh
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: check-authors.yaml  check-build.yaml  check-coding-style.yaml  check-gcc-versions.yaml
HEN_HOUSE/cutils/: Makefile  egs_c_utils.c  egs_c_utils.h  load_beamlib.c  load_vculib.c
HEN_HOUSE/data/: README.md  compton_mutr.data  compton_sigma.data  eii_casnati.data  eii_gryzinski.data  eii_ik.data  eii_kolbenstvedt.data  eii_penelope.data  epdl_pair.data  epdl_photo.data  epdl_rayleigh.data  epdl_triplet.data  iaea_photonuc.data  incoh.data  nist_brems.data  nrc_brems.data  nrc_brems_ee.data  nrc_brems_en.data  pair_nrc1.data  photo_cs.data  photo_relax.data  photo_shellwise.data  rad_compton1.data  relax.data  relax_onebyte.data  si_pair.data  si_photo.data  si_rayleigh.data  si_triplet.data  triplet.data  xcom_photo.data
HEN_HOUSE/python/: .gitignore  Makefile  ausgab.mortran  egs_utilities.mortran  pyproject.toml  user-stubs.mortran
HEN_HOUSE/python/egsnrc/: __init__.py
HEN_HOUSE/python/fortran/: Makefile
HEN_HOUSE/python/notebooks/tutor1/: 00-initial-attempt.ipynb
HEN_HOUSE/python/pyegsnrc/: __init__.py
HEN_HOUSE/python/scripts/: add-jupyter-kernel.sh
stylesheets/: stylesheet.css
(+4090 files in other folders)
